--- a/comparaison.html
+++ b/comparaison.html
@@ -362,7 +362,7 @@
     <footer class="bg-gray-800 text-white py-8 mt-16">
         <div class="container mx-auto px-4 text-center">
             <p class="text-lg mb-2">Présentation sur les Protocoles de Communication Réseau</p>
-            <p class="text-gray-400 mb-4">[Votre nom] - [Date]</p>
+            <p class="text-gray-400 mb-4">D'haene Anthony - Janvier 2026</p>
             <div class="flex justify-center space-x-6 mb-4">
                 <a href="index.html" class="hover:text-indigo-400 transition">Accueil</a>
                 <a href="tcp.html" class="hover:text-blue-400 transition">TCP</a>
