--- a/index.html
+++ b/index.html
@@ -97,48 +97,47 @@
                     </p>
                 </div>
 
-                <h4 class="text-2xl font-bold text-gray-800 mb-6 mt-10">🎯 Rôles Principaux</h4>
+                <h4 class="text-2xl font-bold text-gray-800 mb-6 mt-10">🎯 Rôles Communs à Tous les Protocoles de Transport</h4>
                 
-                <div class="grid md:grid-cols-2 gap-6 mb-8">
-                    <div class="bg-blue-50 p-6 rounded-xl border-l-4 border-blue-500">
+                <div class="grid md:grid-cols-3 gap-6 mb-8">
+                    <div class="bg-blue-50 p-6 rounded-xl border-l-4 border-blue-500 cursor-pointer hover:shadow-lg transition" data-modal="segmentation">
                         <div class="flex items-center mb-3">
                             <svg class="w-8 h-8 text-blue-600 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7h12m0 0l-4-4m4 4l-4 4m0 6H4m0 0l4 4m-4-4l4-4"></path>
                             </svg>
-                            <h5 class="text-xl font-bold text-gray-800">Transfert</h5>
+                            <h5 class="text-xl font-bold text-gray-800">Segmentation</h5>
                         </div>
-                        <p class="text-gray-700">Segmentation et réassemblage des messages</p>
+                        <p class="text-gray-700">Découpage et réassemblage des messages en segments</p>
+                        <p class="text-blue-600 text-sm mt-2 font-semibold">👁️ Voir le schéma →</p>
                     </div>
 
-                    <div class="bg-green-50 p-6 rounded-xl border-l-4 border-green-500">
-                        <div class="flex items-center mb-3">
-                            <svg class="w-8 h-8 text-green-600 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z"></path>
-                            </svg>
-                            <h5 class="text-xl font-bold text-gray-800">Fiabilité</h5>
-                        </div>
-                        <p class="text-gray-700">Détection d'erreurs et retransmission</p>
-                    </div>
-
-                    <div class="bg-purple-50 p-6 rounded-xl border-l-4 border-purple-500">
+                    <div class="bg-purple-50 p-6 rounded-xl border-l-4 border-purple-500 cursor-pointer hover:shadow-lg transition" data-modal="multiplexage">
                         <div class="flex items-center mb-3">
                             <svg class="w-8 h-8 text-purple-600 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21a4 4 0 01-4-4V5a2 2 0 012-2h4a2 2 0 012 2v12a4 4 0 01-4 4zm0 0h12a2 2 0 002-2v-4a2 2 0 00-2-2h-2.343M11 7.343l1.657-1.657a2 2 0 012.828 0l2.829 2.829a2 2 0 010 2.828l-8.486 8.485M7 17h.01"></path>
                             </svg>
                             <h5 class="text-xl font-bold text-gray-800">Multiplexage</h5>
                         </div>
-                        <p class="text-gray-700">Direction via ports vers les bonnes apps</p>
+                        <p class="text-gray-700">Direction via ports vers les applications</p>
+                        <p class="text-purple-600 text-sm mt-2 font-semibold">👁️ Voir le schéma →</p>
                     </div>
 
-                    <div class="bg-orange-50 p-6 rounded-xl border-l-4 border-orange-500">
+                    <div class="bg-orange-50 p-6 rounded-xl border-l-4 border-orange-500 cursor-pointer hover:shadow-lg transition" data-modal="controle">
                         <div class="flex items-center mb-3">
                             <svg class="w-8 h-8 text-orange-600 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path>
                             </svg>
                             <h5 class="text-xl font-bold text-gray-800">Contrôle de Flux</h5>
                         </div>
-                        <p class="text-gray-700">Régulation du débit d'envoi</p>
+                        <p class="text-gray-700">Régulation du débit d'envoi (TCP)</p>
+                        <p class="text-orange-600 text-sm mt-2 font-semibold">👁️ Voir le schéma →</p>
                     </div>
+                </div>
+
+                <div class="bg-yellow-50 p-4 rounded-lg border-l-4 border-yellow-400 mt-4">
+                    <p class="text-sm text-gray-700">
+                        <strong>Note :</strong> TCP et UDP partagent ces rôles de base, mais TCP ajoute des garanties supplémentaires (fiabilité, ordre, contrôle de congestion) qu'UDP ne possède pas.
+                    </p>
                 </div>
             </div>
         </div>
@@ -228,11 +227,19 @@
         </div>
     </section>
 
+    <!-- Modal pour les schémas -->
+    <div id="imageModal" class="fixed inset-0 bg-black bg-opacity-75 hidden items-center justify-center z-50 p-4" style="display: none;">
+        <div class="relative max-w-7xl w-full">
+            <button class="absolute top-4 right-4 text-white text-4xl font-bold hover:text-gray-300 transition bg-black bg-opacity-50 rounded-full w-12 h-12 flex items-center justify-center z-10" onclick="closeModal()">&times;</button>
+            <img id="modalImage" src="" alt="Schéma" class="w-full h-auto max-h-[90vh] object-contain rounded-lg">
+        </div>
+    </div>
+
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8 mt-16">
         <div class="container mx-auto px-4 text-center">
             <p class="text-lg mb-2">Présentation sur les Protocoles de Communication Réseau</p>
-            <p class="text-gray-400 mb-4">D'haene Anthony - Janvier 2026</p>
+            <p class="text-gray-400 mb-4">[Votre nom] - [Date]</p>
             <div class="flex justify-center space-x-6">
                 <a href="index.html" class="hover:text-indigo-400 transition">Accueil</a>
                 <a href="tcp.html" class="hover:text-blue-400 transition">TCP</a>
@@ -250,6 +257,44 @@
         
         menuBtn.addEventListener('click', () => {
             mobileMenu.classList.toggle('hidden');
+        });
+
+        // Modal pour les schémas
+        const modal = document.getElementById('imageModal');
+        const modalImage = document.getElementById('modalImage');
+
+        const imageMap = {
+            'segmentation': 'média/Role-Segmentation.png',
+            'multiplexage': 'média/Role-Multiplexage.png',
+            'controle': 'média/Role-Controle-Flux.png'
+        };
+
+        // Ouvrir le modal
+        document.querySelectorAll('[data-modal]').forEach(card => {
+            card.addEventListener('click', function() {
+                const modalType = this.getAttribute('data-modal');
+                modalImage.src = imageMap[modalType];
+                modal.style.display = 'flex';
+            });
+        });
+
+        // Fermer le modal
+        function closeModal() {
+            modal.style.display = 'none';
+        }
+
+        // Fermer avec Échap
+        document.addEventListener('keydown', function(e) {
+            if (e.key === 'Escape') {
+                closeModal();
+            }
+        });
+
+        // Fermer en cliquant sur le fond
+        modal.addEventListener('click', function(e) {
+            if (e.target === modal) {
+                closeModal();
+            }
         });
     </script>
 </body>
