--- a/index.html
+++ b/index.html
@@ -90,11 +90,19 @@
                     Un protocole de communication réseau est un <strong>ensemble de règles</strong> qui définissent comment les données sont échangées entre dispositifs.
                 </p>
 
-                <div class="bg-gradient-to-r from-blue-50 to-indigo-50 p-8 rounded-xl my-8 border-l-4 border-indigo-500">
-                    <h4 class="text-2xl font-bold text-gray-800 mb-4">📊 Modèle OSI - Couche 4 : Transport</h4>
-                    <p class="text-gray-700">
-                        <strong>TCP et UDP opèrent à la couche Transport</strong>, responsable du transfert de bout en bout entre applications.
-                    </p>
+                <div class="bg-gradient-to-r from-blue-50 to-indigo-50 p-8 rounded-xl my-8 border-l-4 border-indigo-500 cursor-pointer hover:shadow-lg transition" data-modal="osi">
+                    <div class="flex items-center justify-between">
+                        <div>
+                            <h4 class="text-2xl font-bold text-gray-800 mb-4">📊 Modèle OSI - Couche 4 : Transport</h4>
+                            <p class="text-gray-700 mb-2">
+                                <strong>TCP et UDP opèrent à la couche Transport</strong>, responsable du transfert de bout en bout entre applications.
+                            </p>
+                            <p class="text-indigo-600 text-sm mt-3 font-semibold">👁️ Voir le schéma comparatif OSI vs TCP/IP →</p>
+                        </div>
+                        <svg class="w-12 h-12 text-indigo-500 hidden md:block" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path>
+                        </svg>
+                    </div>
                 </div>
 
                 <h4 class="text-2xl font-bold text-gray-800 mb-6 mt-10">🎯 Rôles Communs à Tous les Protocoles de Transport</h4>
@@ -264,6 +272,7 @@
         const modalImage = document.getElementById('modalImage');
 
         const imageMap = {
+            'osi': 'média/Modele-OSI-TCPIP.png',
             'segmentation': 'média/Role-Segmentation.png',
             'multiplexage': 'média/Role-Multiplexage.png',
             'controle': 'média/Role-Controle-Flux.png'
